# server/docs/swagger.json
@@ -10,15 +10,15 @@
     "paths": {
         "/repo/content": {
             "get": {
-                "description": "获取文件信息",
+                "description": "获取仓库具体路径下的内容",
                 "tags": [
                     "仓库"
                 ],
-                "summary": "获取文件信息",
+                "summary": "获取仓库具体路径下的内容",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "accesstoken",
+                        "description": "access_token",
                         "name": "token",
                         "in": "query",
                         "required": true
@@ -48,6 +48,66 @@
                 }
             }
         },
+        "/repo/file": {
+            "put": {
+                "description": "更新文件",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "仓库"
+                ],
+                "summary": "更新文件",
+                "parameters": [
+                    {
+                        "description": "FileInfo",
+                        "name": "token",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.FileInfo"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"success\":true,\"data\":{},\"msg\":\"账号初始化成功\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "新建文件",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "仓库"
+                ],
+                "summary": "新建文件",
+                "parameters": [
+                    {
+                        "description": "FileInfo",
+                        "name": "token",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.FileInfo"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"success\":true,\"data\":{},\"msg\":\"账号初始化成功\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/repo/info": {
             "get": {
                 "description": "获取仓库信息，没有则初始化仓库",
@@ -58,7 +118,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "accesstoken",
+                        "description": "access_token",
                         "name": "token",
                         "in": "query",
                         "required": true
@@ -118,7 +178,7 @@
             "get": {
                 "description": "获取用户的基本信息",
                 "tags": [
-                    "仓库"
+                    "用户"
                 ],
                 "summary": "获取用户信息",
                 "parameters": [
@@ -137,6 +197,28 @@
                             "type": "string"
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "request.FileInfo": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "login": {
+                    "type": "string"
+                },
+                "path": {
+                    "type": "string"
+                },
+                "sha": {
+                    "type": "string"
+                },
+                "token": {
+                    "type": "string"
                 }
             }
         }
